--- a/todo
+++ b/todo
@@ -1,7 +1,7 @@
-logout in party-info - doesn't take to login
 
+Logo at top on all pages (loading not required)
 replace buttons with icons and re-position
 Add party
 standrize code - files
-chk manifest
-chk github pull/merge
+User role/restriction
+4 digit key
