--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 
-Logo at top on all pages (loading not required)
-Add party
 standrize code - files
 User role/restriction
 4 digit key
+
+
+Party-Info:
+After editing Party, add-party icon not showing (works fine after adding new party)
