--- a/todo
+++ b/todo
@@ -6,3 +6,5 @@ User role/restriction
 
 Party-Info:
 After editing Party, add-party icon not showing (works fine after adding new party)
+Copy Party Details as button
+Whatsapp link to Phone
